--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -1,206 +1,12 @@
 <div class="set_banner clearfix">
-  <h3>Featured Promotions</h3>
-  <ul>
-    <li><a href="Banner_Link" target="_blank">Fire TV Stick + FreeTime Unlimited: Save $29.99</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    <li><a href="Banner_Link" target="_blank">Save on Amazon Devices with Trade-in</a></li>
-    <li><a href="Banner_Link" target="_blank">Trade-in Amazon Fire tablets-Get 20% off a new Fire tablet</a></li>
-    <li><a href="Banner_Link" target="_blank">Shop Amazon Devices - Get $35 Toward a New Fire TV 4K Device</a></li>
-    <li><a href="Banner_Link" target="_blank">Create Amazon Business Account</a></li>
-    <li><a href="Banner_Link" target="_blank">Try Prime Discounted Monthly Offering</a></li>
-    <li><a href="Banner_Link" target="_blank">Fire TV Stick + FreeTime Unlimited: Save $29.99</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    <li><a href="Banner_Link" target="_blank">Save on Amazon Devices with Trade-in</a></li>
-    <li><a href="Banner_Link" target="_blank">Trade-in Amazon Fire tablets-Get 20% off a new Fire tablet</a></li>
-    <li><a href="Banner_Link" target="_blank">Shop Amazon Devices - Get $35 Toward a New Fire TV 4K Device</a></li>
-    <li><a href="Banner_Link" target="_blank">Create Amazon Business Account</a></li>
-    <li><a href="Banner_Link" target="_blank">Try Prime Discounted Monthly Offering</a></li>
-    <li><a href="Banner_Link" target="_blank">Fire TV Stick + FreeTime Unlimited: Save $29.99</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    여기서부터 스크롤
-
-    <li><a href="Banner_Link" target="_blank">Trade-in Amazon Fire tablets-Get 20% off a new Fire tablet</a></li>
-    <li><a href="Banner_Link" target="_blank">Shop Amazon Devices - Get $35 Toward a New Fire TV 4K Device</a></li>
-    <li><a href="Banner_Link" target="_blank">Create Amazon Business Account</a></li>
-    <li><a href="Banner_Link" target="_blank">Try Prime Discounted Monthly Offering</a></li>
-    <li><a href="Banner_Link" target="_blank">Fire TV Stick + FreeTime Unlimited: Save $29.99</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    <li><a href="Banner_Link" target="_blank">Get 20% off a new Kindle E-reader</a></li>
-    
-
-  </ul>
-
-  <!-- <div class="banner_box">
-    <a href="banner_link" target="_blank"><img src="banner_image"></a>
-  </div> -->
-
-  <!-- <div class="banner_box">
-    <a href="https://amzn.to/2vKZXlp" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/Associates/PrimeDiscounted_300x250._CB514736209_.jpg"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/2SLRo2N" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img17/student/associate/1028240_student_v5_associate_300x250.jpg"></a>
-  </div>
-  
-  <div class="banner_box">
-    <a href="https://amzn.to/38EpUS5" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img14/beauty/associates/beauty_for-mens-grooming_assoc_300x250_4.gif"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/37KsKUl" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img14/beauty/associates/beauty_for-mens-grooming_assoc_300x250_5.gif"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/2udaYLG" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img14/associates/associates-ads-evergreen_HNR_300x250_offsite._V362696107_.png"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/37HdY0F" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img13/traffic/right-column/gb_associate_300x250.png"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/2ufyXdl" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img15/baby/associate/19765_baby-registry_largest-selection_template_associate_300x250.jpg"></a>
-  </div>
-
-  <div class="banner_box">
-    <a href="https://amzn.to/2TcJMp5" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/G/01/img16/mom/associate/33385_mom_ads_300x250.png"></a>
-  </div> -->
-
+  <%= render 'deals/set_promotion' %>
 </div>
 
 <div class="set_search_box">
-  <h2>Simple Facebook Graph Search</h2>
+  <h2>Advanced Search on Amazon</h2>
 
   <button class="accordion">See All Categories</button>
-  <div class="panel">
-    <div class="post-type">
-    
-      <input id="all-stories" name="post-type" type="radio" value="" checked>
-      <label class="first" for="all-stories">All</label></li>
-
-      <!-- <input id="instant-video" name="post-type" type="radio" value="instant-video">
-      <label for="instant-video">Amazon Video</label></li> -->
-
-      <input id="appliances" name="post-type" type="radio" value="appliances">
-      <label for="appliances">Appliances</label></li>
-
-      <input id="mobile-apps" name="post-type" type="radio" value="mobile-apps">
-      <label for="mobile-apps">Apps & Games</label></li>
-
-      <input id="arts-crafts" name="post-type" type="radio" value="arts-crafts">
-      <label for="arts-crafts">Arts, Crafts & Sewing</label></li>
-
-      <input id="automotive" name="post-type" type="radio" value="automotive">
-      <label for="automotive">Automotive</label></li>
-
-      <input id="baby-products" name="post-type" type="radio" value="baby-products">
-      <label for="baby-products">Baby</label></li>
-
-      <input id="beauty" name="post-type" type="radio" value="beauty">
-      <label for="beauty">Beauty</label></li>
-
-      <input id="stripbooks" name="post-type" type="radio" value="stripbooks">
-      <label for="stripbooks">Books</label></li>
-
-      <input id="music" name="post-type" type="radio" value="music">
-      <label for="music">Music, CDs & Vinyl</label></li>
-
-      <input id="mobile" name="post-type" type="radio" value="mobile">
-      <label for="mobile">Cell Phones & Accessories</label></li>
-
-      <input id="fashion" name="post-type" type="radio" value="fashion">
-      <label for="fashion" class="read-more-target">Clothing, Shoes & Jewelry</label></li>
-
-      <input id="fashion-womens" name="post-type" type="radio" value="fashion-womens">
-      <label for="fashion-womens" class="read-more-target">Women's Fashion</label></li>
-
-      <input id="fashion-mens" name="post-type" type="radio" value="fashion-mens">
-      <label for="fashion-mens" class="read-more-target">Men's Fashion</label></li>
-
-      <input id="fashion-girls" name="post-type" type="radio" value="fashion-girls">
-      <label for="fashion-girls" class="read-more-target">Girl's Fashion</label></li>
-
-      <input id="fashion-boys" name="post-type" type="radio" value="fashion-boys">
-      <label for="fashion-boys" class="read-more-target">Boy's Fashion</label></li>
-
-      <input id="Computers" name="post-type" type="radio" value="Computers">
-      <label for="Computers" class="read-more-target">Computers</label></li>
-
-      <!-- <input id="Credit" name="post-type" type="radio" value="Credit">
-      <label for="Credit" class="read-more-target">Credit and Payment Cards</label></li> -->
-
-      <!-- <input id="digital-music" name="post-type" type="radio" value="digital-music">
-      <label for="digital-music" class="read-more-target">Digital Music</label></li> -->
-
-      <input id="electronics" name="post-type" type="radio" value="electronics">
-      <label for="electronics" class="read-more-target">Electronics</label></li>
-
-      <input id="grocery" name="post-type" type="radio" value="grocery">
-      <label for="grocery" class="read-more-target">Grocery & Gourmet Food</label></li>
-
-      <input id="handmade" name="post-type" type="radio" value="handmade">
-      <label for="handmade" class="read-more-target">Handmade</label></li>
-
-      <input id="hpc" name="post-type" type="radio" value="hpc">
-      <label for="hpc" class="read-more-target">Health & Personal Care</label></li>
-
-      <input id="kitchen" name="post-type" type="radio" value="kitchen">
-      <label for="kitchen" class="read-more-target">Home & Kitchen</label></li>
-
-      <input id="local-services" name="post-type" type="radio" value="local-services">
-      <label for="local-services" class="read-more-target">Home Services</label></li>
-
-      <!-- <input id="industrial" name="post-type" type="radio" value="industrial">
-      <label for="industrial" class="read-more-target">Industrial & Scientific</label></li> -->
-
-      <input id="digital-text" name="post-type" type="radio" value="digital-text">
-      <label for="digital-text" class="read-more-target">Kindle Store</label></li>
-
-      <input id="luggage" name="post-type" type="radio" value="luggage">
-      <label for="luggage" class="read-more-target">Luggage & Travel Gear</label></li>
-
-      <input id="luxury-beauty" name="post-type" type="radio" value="luxury-beauty">
-      <label for="luxury-beauty" class="read-more-target">Luxury Beauty</label></li>
-
-      <input id="magazines" name="post-type" type="radio" value="magazines">
-      <label for="magazines" class="read-more-target">Magazine Subscriptions</label></li>
-
-      <input id="movies-tv" name="post-type" type="radio" value="movies-tv">
-      <label for="movies-tv" class="read-more-target">Movies & TV</label></li>
-
-      <input id="mi" name="post-type" type="radio" value="mi">
-      <label for="mi" class="read-more-target">Musical Instruments</label></li>
-
-      <input id="office-products" name="post-type" type="radio" value="office-products">
-      <label for="office-products" class="read-more-target">Office Products</label></li>
-
-      <input id="lawngarden" name="post-type" type="radio" value="lawngarden">
-      <label for="lawngarden" class="read-more-target">Patio, Lawn & Garden</label></li>
-
-      <input id="instant-video" name="post-type" type="radio" value="instant-video">
-      <label for="instant-video" class="read-more-target">Prime Vidoe</label></li>
-
-      <input id="pets" name="post-type" type="radio" value="pets">
-      <label for="pets" class="read-more-target">Pet Supplies</label></li>
-
-      <input id="software" name="post-type" type="radio" value="software">
-      <label for="software" class="read-more-target">Software</label></li>
-
-      <input id="sporting" name="post-type" type="radio" value="sporting">
-      <label for="sporting" class="read-more-target">Sports & Outdoors</label></li>
-
-      <input id="tools" name="post-type" type="radio" value="tools">
-      <label for="tools" class="read-more-target">Tools & Home Improvement</label></li>
-
-      <input id="toys-and-games" name="post-type" type="radio" value="toys-and-games">
-      <label for="toys-and-games" class="read-more-target">Toys & Games</label></li>
-
-      <input id="videogames" name="post-type" type="radio" value="videogames">
-      <label for="videogames" class="read-more-target">Video Games</label></li>
-       
-    </div>
-  </div>
+  <%= render 'deals/set_category' %>
 
 
   <div class="feild_wrap">
@@ -265,7 +71,7 @@
 
   <div class="option_wrap clearfix">
     <div class="option_box op_wrap">
-      <p>Amazon Prime</p>
+      <p>with Amazon Prime</p>
       <div class="prime-type on_off clearfix">
         <input id="off" name="prime-type" type="radio" value="" checked>
         <label class="first swich_off" for="off">OFF</label>
@@ -277,7 +83,7 @@
     </div>
 
     <div class="option_box op_wrap">  
-      <p>Free Shipping</p>
+      <p>with Free Shipping</p>
       <div class="shipping-type on_off clearfix">
         <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
         <label class="first swich_off" for="shipping_off">OFF</label>
@@ -288,7 +94,7 @@
     </div>
 
     <div class="option_box op_wrap">  
-      <p>With Coupons</p>
+      <p>with Coupons</p>
       <div class="coupon-type on_off clearfix">
         <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
         <label class="first swich_off" for="coupon_off">OFF</label>
