--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -2,11 +2,7 @@
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header_short' %>
-  <div class="deals_main_menu clearfix">
-    <ul>
-      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
-    </ul>    
-  </div>
+  <%= render 'shared/sub_header' %>
   <%= render 'deals/header' %>   
   
   <div class="promotions common_layout clearfix">
