--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -247,7 +247,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .deals_main_menu ul li a:after{display:none;}
   /*.deals_main_menu ul li.nth_1:after{position:absolute;height:7px;content:'';background:#000;width:70%;top:68%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
   /*.deals_main_menu ul li.nth_1 span{display:none;}*/
-  .deals_main_menu ul li a{float:none;font-size:37px;}
+  .deals_main_menu ul li a{float:none;font-size:30px;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -273,6 +273,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_open_b.on{display:block;right:5px;top:5px;}
   .sub_nav .gnb_open_b img{width:40px;height:40px;}
   .sub_nav .gnb_kbg{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:301;}
+  .deals_main_menu ul li a{font-size:39.6px;}
 }
 
 /* Common Layout */
@@ -541,15 +542,17 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 
-.set_search{font-family:'Montserrat', sans-serif;margin-bottom:50px;}
-.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:650px;overflow:scroll;}
+.set_search{font-family:'Montserrat', sans-serif;}
+.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:523.88px;overflow:scroll;}
+.set_banner h2{font-size:20px;}
 .set_banner ul{margin-left:15px;}
-.set_banner ul li{margin:5px 0;list-style:disc;}
+.set_banner ul li{margin:10px 0;list-style:disc;}
 .set_banner ul li a{color:#08f;}
+.set_b_m{display:none;}
 /*.set_banner .banner_box{float:left;width:48%;margin:1%;}
 .set_banner .banner_box img{width:100%;border-radius:10px;border:1px solid #ccc;}*/
-.set_search_box{float:left;width:63%;margin-left:2%;background:white;margin:0 auto 50px auto;border-radius:5px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:34px;border:1px solid #aaa;}
-.set_search_box h2{margin:0 0 20px;}
+.set_search_box{float:left;width:63%;margin-left:2%;background:white;margin:0 auto 50px auto;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px 30px;border:1px solid #aaa;}
+.set_search_box h2{margin:0 0 20px;font-size:20px;}
 .disable{display:none;}
 /*.post-type, */.prime-type, .coupon-type, .shipping-type, .fast-type{display:table;width:100%;/*table-layout:fixed;*/margin-bottom:20px;}
 .post-type{}
@@ -565,7 +568,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 /*.post-type label:first-of-type, */.prime-type label:first-of-type, .coupon-type label:first-of-type, .shipping-type label:first-of-type, .fast-type label:first-of-type{border-left:1px solid #e3e3e3;}
 .field {padding:15px 0;overflow:hidden;}
 .field span.label{width:25%;float:left;padding:10px;}
-.field input, .field select{width:50%;float:left;padding:14px 10px;border:1px solid #e3e3e3;-webkit-appearance:none;-moz-appearance:none;appearance:none;border-radius:10px;background:#fff;color:#616161;font-size:14px;}
+.field input, .field select{width:50%;float:left;padding:14px 10px;border:1px solid #e3e3e3;-webkit-appearance:none;-moz-appearance:none;appearance:none;border-radius:10px;background:#fff;color:#616161;font-size:14px;font-weight:300;}
 .field .custom-time{padding-left:40%;padding-top:10px;clear:both;}
 .field .custom-time select, .field .custom-time input{float:left;width:45%;}
 .field .custom-time select {margin-right:5%;}
@@ -575,33 +578,44 @@ header .gnb_m,header .gnb_open2{display:none;}
 .search_dropdown{display:inline-block;}
 
 .set_search_box button{border:none;padding:10px 20px;}
-.set_search_box button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#fff;color:#000;font-size:15px;border-radius:10px;border:1px solid #ccc;}
+.set_search_box button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#fff;color:#616161;font-size:15px;border-radius:10px;border:1px solid #ccc;font-weight:300;}
 .set_search_box button.accordion span{font-size:15px;font-weight:bold;}
 .set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
 .set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:30px;}
+.option_wrap{}
 
-a.set_reset, a.set_reset_m{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;float:left;}
+a.set_reset, a.set_reset_m{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;float:left;}
 a.set_reset_m{display:none;}
 
 @media screen and (max-width:640px){
   /*.set_search{display:none;}*/
   .op_wrap{float:none;width:100%;margin:0;}
-  .set_search_box{width:100%;margin-bottom:0;padding:15px;}
+  .set_search_box{width:100%;margin:10px 0 0 0;padding:10px;}
   .set_search_box button{width:100%;} 
   .field span.label{width:100%;float:none;padding:0;}
   .field input, .field select{width:100%;float:none;}
   .field .custom-time{padding:10px 0 0 0;}
   .field .custom-time select, .field .custom-time input{width:48%;margin:0 1% 0 1%;}
-  .set_search_box button.accordion{width:100%;}
+  .set_search_box button.accordion{width:100%;text-align:left;}
   .set_search_box .panel{padding:0;}
-  .set_search_box h2{font-size:16px;}
   .set_banner{display:none;float:none;width:100%;margin:0 0 20px 0 ;}
   a.set_reset{display:none;}
   a.set_reset_m{display:block;}
+  .option_wrap{width:104%;}
+  .text-center{padding-top:0;}
+  .set_b_m{display:block;margin-top:20px;}
   
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .set_search{display:none;}
+  .set_banner{height:409.25px;}
+  .set_banner h2{font-size:17px;}
+  .field span.label{width:33%;}
+  .field input, .field select{width:64%;}
+  .set_search_box{padding:10px;}
+  .set_search_box button.accordion{width:50%;}
+  .option_box p{font-size:12px;}
+  .text-center{padding-top:0;}
+  .set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:0;}
 }
 
 
