--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -3,12 +3,12 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li><a href="/hotdeals">More Deals & Coupons</a></li>
+        <li><a href="/deals/quick_search">Real-Time Deal Finder</a></li>
+        <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li class="coumos1"><a href="/deals/bestdeals">Today's Deals</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
         <li><a href="/deals/promo_codes">Today's Coupon Codes</a></li>
         <!-- <li class="more"><a href="/promocodes">[ More Codes ]</a></li> -->
-        <li><a href="/deals/quick_search">Real Time Hot Deal Finder</a></li>
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li> -->
         <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
@@ -21,18 +21,18 @@
 
       <ul class="clearfix">
         <p>MENU</p>
-        <li class="top_menu"><a href="/deals/bestdeals">Amazon's Bargain</a></li>
-        <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li>
+        <li class="top_menu"><a href="/deals/quick_search">AMAZON's BARGAIN</a></li>
+        <li><a href="/deals/quick_search">REAL-TIME DEAL FINDER,</a></li>
+        <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
         <li><a href="/deals/promo_codes">TODAY'S COUPON CODES,</a></li>
         <!-- <li><a href="/promocodes"> - MORE CODES,</a></li> -->
-        <li><a href="/deals/quick_search">REAL TIME HOT DEAL FINDER,</a></li>
         <!-- <li><a href="/deals/most_reviewed">MOST-REVIEWED,</a></li> -->
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
-        <li class="top_menu"><a href="/deals/stores">Bargain By Store</a></li>
+        <li class="top_menu"><a href="/deals/stores">BARGAIN BY STORE</a></li>
         <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
         <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
