--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -1,12 +1,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap"> 
   <%= render 'shared/header_short' %>
-  <div class="deals_main_menu clearfix">
-    <ul>
-      <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/deals/stores"><span>, Bargain By Store</span></a></li>
-      <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
-    </ul>    
-  </div>
+  <%= render 'shared/sub_header' %>
   <%= render 'deals/header' %> 
   
   <div class="coupons common_layout clearfix">
