--- a/app/views/promocodes/index.html.erb
+++ b/app/views/promocodes/index.html.erb
@@ -2,22 +2,9 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
     <%= render 'shared/header_short' %>
-    <!-- <div class="dealpage_title"><p>The Coupons on Amazon</p></div> -->
-    <div class="deals_main_menu clearfix">
-      <ul>
-        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
-      </ul>    
-    </div>
-    <%= render 'promocodes/header' %>  
+    <%= render 'shared/sub_header' %>
+    <%= render 'shared/hotpro_header' %>
     
-    <!-- <div class="amz_slider_banner">
-      <div class="left">
-        <p>Never Pay Full Price.</p>
-        <span>I would find hot deals for you every day.</span>
-      </div> 
-      <div class="right"><render 'shared/amz_slider' ></div>
-    </div> -->
-
     <div class="more_search"><%= form_for "",url: promocodes_path, role: "search", method: :get do %><%= text_field_tag :search, @search_term, placeholder: "Search..." %><% end %></div>
 
     <div id="promocodes" class="clearfix">
