--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -9,7 +9,7 @@
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
-        <li><a href="/deals/bestdeals">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
        </ul>      
      </div>
     <!-- </div> -->
@@ -34,7 +34,7 @@
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <!-- <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li> -->
-        <li><a href="/deals/bestdeals">BARGAIN <!-- <em>of Amazon</em> --></a></li>
+        <li><a href="/deals/quick_search">BARGAIN <!-- <em>of Amazon</em> --></a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
       
