--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -11,7 +11,7 @@
     </div> -->
     <div class="deals_main_menu clearfix">
       <ul>
-        <li class="nth_1"><a href="/deals/bestdeals">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
+        <li class="nth_1"><a href="/deals/quick_search">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
       </ul>    
     </div>
     <%= render 'deals/header_store' %>
