real time deal finder

--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -26,8 +26,8 @@
           </div>
         </div>
         <div class="rt_cnt">
-          <h2>Real Time Hot Deal Finder on Amazon</h2>
-          <h2 class="for_m">Real Time Hot Deal Finder on Amazon</h2>
+          <h2>Simple Deal Finder on Amazon</h2>
+          <h2 class="for_m">Simple Deal Finder on Amazon</h2>
           
           <!-- <%= render 'shared/amz_search' %> -->
            
