--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -3,7 +3,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap">  
   <%= render 'shared/header_short' %>
-  <%= render 'shared/sub_header' %>
+  <%= render 'shared/header_amazon' %>
   <%= render 'deals/header' %>    
   <div class="codes common_layout">
 
