--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -2,7 +2,7 @@
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header_short' %>
-  <%= render 'shared/sub_header' %>
+  <%= render 'shared/header_amazon' %>
   <%= render 'deals/header' %>   
   
   <div class="promotions common_layout clearfix">
