--- a/app/views/deals/stores.html.erb
+++ b/app/views/deals/stores.html.erb
@@ -1,7 +1,7 @@
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header_short' %>
-  <%= render 'shared/sub_header' %>
+  <%= render 'shared/header_bystore' %>
   <%= render 'deals/header_store' %>
   <%= render 'deals/body_stores' %>
   
