--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -208,7 +208,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .sub_nav .shoes_nav_pc>ul{background:#000;padding:5px 0;}
 .sub_nav .shoes_nav_pc>ul>li{width:auto;margin:0 2%;}
 .sub_nav .sub_nav_pc>ul>li>a{text-decoration:none;color:#000;font-size:20px;display:block;font-weight:400;}
-.sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border-bottom:2px solid #000;display:inline;background:#ffff00;}
+.sub_nav .sub_nav_pc>ul>li>a.active{color:#000;font-weight:bold;border-bottom:2px solid #000;display:inline;background:#ffff00;padding:2px 10px;}
 .sub_nav .gnb_open,
 .sub_nav .gnb_open_b,
 .sub_nav .gnb_m,
@@ -218,7 +218,9 @@ header .gnb_m,header .gnb_open2{display:none;}
 .deals_main_menu ul{font-family: 'Righteous', cursive;}
 .deals_main_menu ul li{float:left;margin-right:20px;position:relative;}
 .deals_main_menu ul li a{text-decoration:none;font-size:55px;color:#000;}
+.deals_main_menu ul li a.active{background:#000;color:#fff;padding:0 10px;border-radius:20px;}
 .deals_main_menu ul li a:hover{border-bottom:3px solid;}
+.deals_main_menu ul li em{font-size:55px;display:inline-block;}
 /*.deals_main_menu ul li a:after{position:absolute;height:10px;content:'';background:#000;width:110%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
 /*.deals_main_menu ul li.nth_1:after{}*/
 
@@ -273,7 +275,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_open_b.on{display:block;right:5px;top:5px;}
   .sub_nav .gnb_open_b img{width:40px;height:40px;}
   .sub_nav .gnb_kbg{display:none;position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:301;}
-  .deals_main_menu ul li a{font-size:39.6px;}
+  .deals_main_menu ul li a{font-size:37.6px;}
 }
 
 /* Common Layout */
