--- a/app/views/deals/coupons.html.erb
+++ b/app/views/deals/coupons.html.erb
@@ -1,7 +1,7 @@
 <div class="layout"><!--layout-->
   <div class="wrap"> 
   <%= render 'shared/header_short' %>
-  <%= render 'shared/sub_header' %>
+  <%= render 'shared/header_amazon' %>
   <%= render 'deals/header' %> 
   
   <div class="coupons common_layout clearfix">
