--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -4,7 +4,7 @@
   <div class="wrap">
 
     <%= render 'shared/header_short' %>
-    <%= render 'shared/sub_header' %>
+    <%= render 'shared/header_amazon' %>
     <%= render 'deals/header' %>    
 
     <div class="codes common_layout">
