--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -9,11 +9,7 @@
         <div class="dealpage_title"><p>Sales & Promotions</p></div>    
       <% end %>
     </div> -->
-    <div class="deals_main_menu clearfix">
-      <ul>
-        <li class="nth_1"><a href="/deals/quick_search">Amazon's Bargain</a><a href="/storepromotions"><span>, Bargain By Store</span></a></li>
-      </ul>    
-    </div>
+    <%= render 'shared/header_bystore' %>
     <%= render 'deals/header_store' %>
 
     <div class="sp_wrap">
