--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -226,7 +226,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 @media screen and (max-width:640px){
-  /*.deals_main_menu{display:none;}*/
+  .deals_main_menu ul li em{font-size:30px;}
   .sub_nav{}
   .shoes_nav{margin-top:20px;}
   .sub_nav .sub_nav_pc{display:none;}
@@ -249,7 +249,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .deals_main_menu ul li a:after{display:none;}
   /*.deals_main_menu ul li.nth_1:after{position:absolute;height:7px;content:'';background:#000;width:70%;top:68%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
   /*.deals_main_menu ul li.nth_1 span{display:none;}*/
-  .deals_main_menu ul li a{float:none;font-size:30px;}
+  .deals_main_menu ul li a{float:none;font-size:18px;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
