--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -5,7 +5,7 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'hotdeals/header' %>  
+    <%= render 'shared/header_amazon' %>  
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
