--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -5,7 +5,7 @@
   
   <div class="show_wrap clearfix">
     <div class="wrap">
-    <%= render 'promocodes/header' %>  
+    <%= render 'shared/header_amazon' %>  
     
       <div class="show_box translate_box clearfix">
         
