--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -6,6 +6,7 @@
   <div class="show_wrap clearfix">
     <div class="wrap">
     <%= render 'shared/header_amazon' %>  
+    <%= render 'shared/hotpro_header' %>
     
       <div class="show_box translate_box clearfix">
         
