--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -36,7 +36,7 @@
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
   .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;position:relative;}
   .codes .lt_cnt .most_hotdeal .image img{width:100%;height:100px;object-fit:contain;}
-  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:0 7px 5px 0;}
+  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding-left:10px;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
   .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;word-break:break-word;}
   .codes .lt_cnt .most_hotdeal .inner p.expired{font-size:11px;color:#ff0000;}
@@ -113,12 +113,12 @@
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
 
-  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;position:relative;}
+  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:8px;position:relative;}
   .codes .card_wrap .card .inner>.code_high .extra_info{font-size:13px;}
 
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
-  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
-  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{font-size:25px;margin-right:5px;font-weight:500;}
+  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
 
@@ -139,11 +139,11 @@
   /*.codes .card_wrap .card .inner>.code_high .tooltipurple{background:#b400b4;}*/
   .codes .card_wrap .card .inner>.code_high .tooltipurple .tooltip-content{background:#b400b4;}
 
-  .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#000;display:block;}
   .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;float:right;}
 
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
-  .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
+  .codes .card_wrap .card .inner>.code_high .discounted{font-size:25px;margin-right:5px;font-weight:500;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:none;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
@@ -160,7 +160,7 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
 
   .codes .card_wrap .card .inner>.code_high .info_wrap{}
-  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:31%;margin:1%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:20px;}
 
@@ -216,7 +216,7 @@
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
   .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;}
   .codes .lt_cnt .most_hotdeal .image img{width:100%;}
-  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:20px 7px 5px 0;}
+  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding-left:10px;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
   .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;word-break:break-word;}
   .codes .lt_cnt .most_hotdeal .inner em{font-size:20px;}
@@ -233,7 +233,7 @@
   .codes .card_wrap .card .image_box .dealtube img{width:45px;height:45px;position:absolute;bottom:0;left:0;}
   .codes .card_wrap .card .image_box .dealtube button.text{display:none;}
 
-  .codes .card_wrap .card .inner{padding:7px;font-weight:400}
+  .codes .card_wrap .card .inner{padding:0 0 10px 0;font-weight:400}
   .codes .card_wrap .card .inner_top{margin-top:50px;}
   .codes .card_wrap .card .inner .new_mark{color:#fff;background:#ff0000;font-size:14px;padding:4px 5px;margin-right:7px;border-radius:7px;font-weight:bold;display:inline-block;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
@@ -252,15 +252,15 @@
   .codes .card_wrap .card .inner>.code_high{position:relative;}
   .codes .card_wrap .card .inner>.code_high .extra_info{}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
-  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
-  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
+  .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:500;}
+  .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#000;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .info_wrap{}
-  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:23%;margin:2px;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px 0;}
+  .codes .card_wrap .card .inner>.code_high .info_wrap .box{float:left;width:32%;margin:0.5%;text-align:center;box-shadow:0 0 20px 0 rgba(0,0,0,.06);padding:5px 0;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box p{font-size:12px;margin:5px;color:#6d6e71;}
   .codes .card_wrap .card .inner>.code_high .info_wrap .box em{font-size:15px;}
 
@@ -275,11 +275,11 @@
 
   .codes .card_wrap .card .inner>.code_high>ul.exp{}
   .codes .card_wrap .card .inner>.code_high>ul.exp>li{list-style:disc;font-size:11px;color:#616161;display:block;margin-top:3px;}
-  .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
+  .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#000;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>em.expired{background:#ff4d4d;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;}
   .codes .card_wrap .card .inner>.code_high>.endtoday{background:#ffa500;color:#fff;display:inline-block;padding:5px 10px;border-radius:15px;margin:0 0 5px 10px;font-size:11px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;}
-  .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
+  .codes .card_wrap .card .inner>.code_high .discounted{font-size:25px;margin-right:5px;font-weight:500;display:inline-block;}
   .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;font-size:10px;}
