--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="set_search_box">
-  <h2>Advanced Search on Amazon</h2>
+  <h2>Amazon Deal Finder</h2>
 
   <button class="accordion">See All Categories</button>
   <%= render 'deals/set_category' %>
@@ -122,7 +122,7 @@
   
   <div class="text-center">
     <a class="set_reset" href="/deals/quick_search">Reset</a>
-    <button class="search">Search</button>
+    <button class="search">Find Deals</button>
   </div>
 </div>
 
