--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -3,7 +3,7 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-        <li><a href="/deals/quick_search">Real-Time Deal Finder</a></li>
+        <li><a href="/deals/quick_search">Amazon Deal Finder</a></li>
         <!-- <li><a href="/hotdeals">More Deals & Coupons</a></li> -->
         <li class="coumos1"><a href="/deals/bestdeals">Today's Deals</a></li>
         <!-- <li class="more"><a href="/hotdeals">[ More Deals ]</a></li> -->
@@ -22,7 +22,7 @@
       <ul class="clearfix">
         <p>MENU</p>
         <li class="top_menu"><a href="/deals/quick_search">AMAZON's BARGAIN</a></li>
-        <li><a href="/deals/quick_search">REAL-TIME DEAL FINDER,</a></li>
+        <li><a href="/deals/quick_search">AMAZON DEAL FINDER,</a></li>
         <!-- <li><a href="/hotdeals">MORE DEALS & COUPONS</a></li> -->
         <li><a href="/deals/bestdeals">TODAY'S DEALS,</a></li>
         <!-- <li><a href="/hotdeals"> - MORE DEALS,</a></li> -->
@@ -33,7 +33,7 @@
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">SALES OFFER & PROMOTIONS,</a></li>
         <li class="top_menu"><a href="/deals/stores">BARGAIN BY STORE</a></li>
-        <li><a href="/storepromotions">COUPONS & PROMOTIONS,</a></li>
+        <li><a href="/storepromotions">DEALS & PROMOTIONS,</a></li>
         <li><a href="/storedeals">THE BEST DEALS</a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
